mongo-deployment-duplicate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: chandana-ns
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:7-jammy
        
        ports:
        - containerPort: 27017
        resources:
          requests: 
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "130Mi"
            cpu: "200m"
        volumeMounts:
          - name: chandana-vol #same name as volumes
            mountPath: /data/db
            

      volumes: #sits outside the container
        - name: chandana-vol 
          persistentVolumeClaim:
            claimName: chandana-pvc
        
            
            

        


---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: chandana-ns
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
  type: ClusterIP
