gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata: 
  name: kgateway1
  namespace: chandana-ns
spec: 
  gatewayClassName: kgateway
  listeners:
  - name: http
    protocol: HTTP 
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
